--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar border-bottom">
         <div class="container-fluid">
         <a href="#" class="navbar-brand text-light"><h1 class="ms-3 fw-bold">Food,LLC</h1></a>
-        <button class="navbar-toggler d-lg-none d-md-none d-sm-none d-xs-block bg-light" data-bs-toggle="collapse" data-bs-target="#menu" type="button">
+        <button class="navbar-toggler d-lg-none d-md-none d-sm-block d-xs-block bg-light" data-bs-toggle="collapse" data-bs-target="#menu" type="button">
             <span class="navbar-toggler-icon"></span>
             
         </button>
