--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="fs-5">
         <li class="pb-3 mt-3 text-center  border-bottom border-dark"><a class="text-decoration-none text-dark" href="#">Chicken</a></li>
         <li class="p-3 text-center  border-bottom border-dark"><a class="text-decoration-none text-dark" href="#">Beef</a></li>
-        <li class="p-3 text-center  border-bottom border-dark border-5"><a class="text-decoration-none text-dark" href="#">Chicken</a></li>
+        <li class="p-3 text-center  border-bottom border-dark border-5"><a class="text-decoration-none text-dark" href="#">Sushi</a></li>
     </div>
 </ul>
 
@@ -53,7 +53,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam pulvinar cursus. Vestibulum id nisl sit amet neque molestie venenatis. Pellentesque sagittis a sem sed tincidunt. Vivamus aliquam ante tellus. Donec purus arcu, sodales ut condimentum sit amet, finibus ac metus. In hac habitasse platea dictumst. Cras dui eros, varius in neque nec, hendrerit luctus turpis. In rutrum nunc in nunc gravida pharetra. Fusce ac orci augue. Morbi eget est nisi. Maecenas felis risus, sagittis ut sagittis nec, consectetur eget lorem. Proin blandit leo ac lacinia faucibus. Sed et nulla id nunc viverra ornare et sit amet massa. Phasellus vulputate nisi vitae ligula mollis rhoncus. Pellentesque consectetur orci id mi molestie pretium. Vivamus eget lacinia orci.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam pulvinar cursus. Vestibulum id nisl sit amet neque molestie venenatis. Pellentesque sagittis a sem sed tincidunt. Vivamus aliquam ante tellus. Donec purus arcu, sodales ut condimentum sit amet, finibus ac metus. In hac habitasse platea dictumst. Cras dui eros, varius in neque nec, hendrerit luctus turpis. In rutrum nunc in nunc gravida pharetra. Fusce ac orci augue. Morbi eget est nisi. Maecenas felis risus, sagittis ut sagittis nec, consectetur eget lorem. Proin blandit leo ac lacinia faucibus. Sed et nulla id nunc viverra ornare et sit amet massa. Phasellus vulputate nisi vitae ligula mollis rhoncus. Pellentesque consectetur orci id mi molestie pretium. Vivamus eget lacinia orci.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam pulvinar cursus. Vestibulum id nisl sit amet neque molestie venenatis. Pellentesque sagittis a sem sed tincidunt. Vivamus aliquam ante tellus. Donec purus arcu, sodales ut condimentum sit amet, finibus ac metus. In hac habitasse platea dictumst. Cras dui eros, varius in neque nec, hendrerit luctus turpis. In rutrum nunc in nunc gravida pharetra. Fusce ac orci augue. Morbi eget est nisi. Maecenas felis risus, sagittis ut sagittis nec, consectetur eget lorem. Proin blandit leo ac lacinia faucibus. Sed et nulla id nunc viverra ornare et sit amet massa. Phasellus vulputate nisi vitae ligula mollis rhoncus. Pellentesque consectetur orci id mi molestie pretium. Vivamus eget lacinia orci.
-        </div>
+    </div>
 </div>
 </div>
 
